# sim2real-inference_code_ros2

./: .gitignore  README.md
docs/: configuration.md  development.md  troubleshooting.md
install/: local_setup.sh  setup.sh
install/hightorque_rl_inference/include/hightorque_rl_inference/: hightorque_rl_inference.h
install/hightorque_rl_inference/share/ament_index/resource_index/package_run_dependencies/: hightorque_rl_inference
install/hightorque_rl_inference/share/ament_index/resource_index/parent_prefix_path/: hightorque_rl_inference
install/hightorque_rl_inference/share/hightorque_rl_inference/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/hightorque_rl_inference/share/hightorque_rl_inference/cmake/: hightorque_rl_inferenceConfig.cmake
log/: latest_build
src/hightorque_rl_inference/: CMakeLists.txt  config_example.yaml  package.xml
src/hightorque_rl_inference/include/hightorque_rl_inference/: hightorque_rl_inference.h
src/hightorque_rl_inference/launch/: hightorque_rl_inference.launch.py
src/hightorque_rl_inference/src/: hightorque_rl_inference.cpp  main.cpp
src/sim2real_msg_ros2/: CMakeLists.txt  package.xml
src/sim2real_msg_ros2/action/: Temp.action
src/sim2real_msg_ros2/msg/: HightorqueJoy.msg
