<?xml version="1.0"?>
<package format="3">
  <name>hightorque_rl_inference</name>
  <version>1.0.0</version>
  <description>HighTorque RL Inference Package (ROS2)</description>

  <maintainer email="support@hightorque-robotics.com">HighTorque Robotics</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rosgraph_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>sim2real_msg_ros2</depend>

  <depend>eigen</depend>
  <depend>yaml-cpp</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

